[metadata]
name = piechart
version = 0.1
author = KOLANICH
url = https://github.com/KOLANICH/piechart.py
description = A damn damn damn small and simple pie chart library without any dependencies.
long_description = file: ReadMe.md
keywords = piechart
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=3.4
zip_safe = True
py_modules = piechart
setup_requires = setuptools>=44; wheel; setuptools_scm[toml]>=3.4.3
